cabal-version:      3.0
name:               haskell-competitive-programming
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             awayatakuma
maintainer:         takuma.awaya@gmail.com
category:           Math
build-type:         Simple

extra-doc-files:    CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , split
                     , containers
  default-language:    Haskell2010

executable aoj-itp1-1-a
  hs-source-dirs:      src/aoj/itp1
  main-is:             itp1_1_a.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-competitive-programming
  default-language:    Haskell2010
